# biblio-checker

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.claude/: README.md
apps/backend/: .env.example  AGENTS.md  README.md  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: router.py
apps/backend/app/api/controllers/analysis/: start.py  status.py
apps/backend/app/core/: config.py  problems.py  supabase_client.py  supabase_storage.py
apps/backend/app/schemas/: analysis.py  analysis_jobs.py  audit_events.py  references.py  results.py
apps/backend/app/services/: analysis_jobs_repo.py  audit_repo.py  integrity.py  supabase_storage.py  text_extraction.py
apps/backend/app/utils/: datetime_coercion.py
apps/backend/tests/: test_audit_repo.py  test_health.py  test_integrity_service.py  test_text_extraction_service.py  test_verify_authenticity_validation.py
apps/backend/tests/api/: test_status_datetime_normalization.py  test_status_result_validation.py
apps/backend/tests/schemas/: test_results.py
apps/worker/: .env.example  AGENTS.md  README.md  pyproject.toml
apps/worker/biblio_checker_worker/: __main__.py  main.py
apps/worker/biblio_checker_worker/core/: config.py
apps/worker/biblio_checker_worker/jobs/: audit_repo.py  enums.py  errors.py  models.py  repo.py
apps/worker/biblio_checker_worker/langgraph/: flow.py
apps/worker/biblio_checker_worker/pipeline/: context.py  runner.py
apps/worker/biblio_checker_worker/pipeline/stages/: extract.py  persist.py  run_langgraph.py
apps/worker/biblio_checker_worker/polling/: runner.py
apps/worker/biblio_checker_worker/supabase/: client.py
apps/worker/tests/: conftest.py  test_audit_repo.py  test_imports.py
(+138 files in other folders)
