[project]
name = "biblio-checker-backend"
version = "0.1.0"
description = "FastAPI backend for Biblio Checker"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "fastapi",
  "pydantic-settings",
  "uvicorn[standard]",
]

[dependency-groups]
dev = [
  "httpx",
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
default-groups = ["dev"]
