[project]
name = "biblio-checker-worker"
version = "0.1.0"
description = "Python worker for consuming Supabase jobs and triggering LangGraph flows"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "langgraph",
  "pydantic-settings",
  "supabase",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
default-groups = ["dev"]
